@@ -22,10 +22,11 @@
 obj-y := driver.o
 obj-y += drv-mem.o
 
-obj-$(CONFIG_DRIVER_FAT)	+= drv-fat.o
-obj-$(CONFIG_DRIVER_EXT2)	+= drv-ext2.o
-obj-$(CONFIG_DRIVER_JFFS2)	+= drv-jffs2.o
-obj-$(CONFIG_DRIVER_NOR_CFI)	+= drv-nor-cfi.o
-obj-$(CONFIG_DRIVER_COMPACTFLASH) += drv-cf.o
-obj-$(CONFIG_DRIVER_SMC91X)	+= drv-smc91x.o
-obj-$(CONFIG_CMD_ETH_DM9000)	+= drv-dm9000.o
+obj-$(CONFIG_DRIVER_FAT)		+= drv-fat.o
+obj-$(CONFIG_DRIVER_EXT2)		+= drv-ext2.o
+obj-$(CONFIG_DRIVER_JFFS2)		+= drv-jffs2.o
+obj-$(CONFIG_DRIVER_NOR_CFI)		+= drv-nor-cfi.o
+obj-$(CONFIG_DRIVER_COMPACTFLASH)	+= drv-cf.o
+obj-$(CONFIG_DRIVER_SMC91X)		+= drv-smc91x.o
+obj-$(CONFIG_CMD_ETH_DM9000)		+= drv-dm9000.o
+obj-$(CONFIG_DRIVER_FIS)		+= drv-fis.o
